resolve div too wide for iPhone6/7/8

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -471,7 +471,7 @@ footer p {
   background-color: #fff;
 }
 .fonctionnement__steps {
-  width: 375px;
+  width: 339px;
   margin: auto;
   height: 350px;
   padding: 25px 0px 25px 0px;
