--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -55,7 +55,7 @@
 .fonctionnement {
       background-color: $colour-white;
       &__steps {
-            width: 375px;
+            width: 339px;
             margin: auto;
             height: 350px;
             padding: 25px 0px 25px 0px;
